kubernetes/apps/selfhosted-apps/netbox/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.noirprime.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbox
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: netbox.png
    gethomepage.dev/name: Netbox
    gethomepage.dev/group: Service
    gethomepage.dev/pod-selector: "app.kubernetes.io/component=netbox"
    gatus.home-operations.com/endpoint: |
      conditions:
        - "[STATUS] == 200"
spec:
  hostnames: ["netbox.noirprime.com"]
  parentRefs:
    - name: envoy-internal
      namespace: networking-system
      sectionName: https
  rules:
    - backendRefs:
        - name: netbox
          namespace: selfhosted-apps
          port: 80
